--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "react-redux": "^9.1.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all",
+    "last 15 versions",
+    "Firefox ESR"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.11",
